# fastapi-async-sqlalchemy

./: README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/core/: configs.py  database.py
app/database/: create_tables.py
app/models/: __all_models.py  users_model.py
