[tool.poetry]
name = "fastapi-async-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Wilkne Maia <wilkne@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.37"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
flake8-debugger = "^4.1.2"
flake8-pytest-style = "^1.6.0"
isort = "^5.10.1"
pep8-naming = "^0.13.0"
pip-audit = "^2.3.1"
bandit = "^1.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
